@@ -1,3 +1,9 @@
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
+        * gfile.[ch]:
+        * glocalfile.c:
+	Add G_FILE_COPY_NO_FALLBACK_FOR_MOVE flag
+
 2007-12-02  A. Walton  <awalton@svn.gnome.org>
 
 	* gfile.c:
